network-policies/np-egress-planner-to-serverservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-to-serverservice
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: serverservice
      ports:
        - port: 8080
