network-policies/np-ingress-serverservice-from-planner.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: serverservice-from-planner
spec:
  podSelector:
    matchLabels:
      app: serverservice
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: planner
      ports:
        - port: 8080
